--- a/src/components/@pages/SettingsPage/SettingsPage.scss
+++ b/src/components/@pages/SettingsPage/SettingsPage.scss
@@ -65,4 +65,8 @@
 		flex-direction: column;
 		gap: 1rem;
 	}
+
+	.content-settings__logout > .button {
+		width: 100%;
+	}
 }
